--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <style>
+    @media (min-width: 750px) {
+      body {
+        transform: scale(1);
+        transform-origin: top center;
+        overflow: hidden;
+        height: 100vh;
+        width: 50vw;
+        margin: 0 auto;
+      }
+    }
+  </style>
 </head>
 
 <body>
